--- a/stureports/think-java/bealarson82.think-java_results.html
+++ b/stureports/think-java/bealarson82.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-11-30
+Run date: 2018-12-02
 <br>Student User: bealarson82
 <br>Project: think-java
 <br>
@@ -176,7 +176,7 @@ Number of seconds since midnight:
 <hr>
 
 <b>[Assignment]  > Think Java: Ch7 - pt1 < </b>
-  [DESC] HW4: Fourth HW Assignment, Ch7 Ex3 & 4
+  [DESC] HW7: Fourth HW Assignment, Ch7 Ex3 & 4
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']
@@ -210,7 +210,7 @@ TestCh7Ex4.java:47: error: incompatible types: boolean cannot be converted to bo
 <hr>
 
 <b>[Assignment]  > Think Java: Ch7 - pt2 < </b>
-  [DESC] HW5: Fith HW Assignment, Ch7 Ex5, 6, 8
+  [DESC] HW7: Fith HW Assignment, Ch7 Ex5, 6, 8
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise5', 'Exercise6', 'Exercise8']
@@ -262,42 +262,13 @@ TestCh7Ex4.java:47: error: incompatible types: boolean cannot be converted to bo
 <hr>
 
 <b>[Assignment]  > Think Java: Ch11< </b>
-  [DESC] HW6: HW Assignment, Ch11 Ex3
+  [DESC] HW11: Poker Hand Test
 
-*[BEGIN chapter11]
-  [EXPECTING TARGETS] ['Tile']
-[COMPILING] Tile.java
-	[SUCCESSFUL COMPILE] Tile.java
-[TESTING WITH] TestTile
-[COMPILING] TestTile.java
-	[SUCCESSFUL COMPILE] TestTile.java
-[RUNNING] TestTile
--->
-
-	<br>Chapter11, Exercise3: Tile Class
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">new Tile()("C, 3")  </td><td align="left">Null</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">new Tile()("Z, 10")  </td><td align="left">Null</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Tile[3-C ].getLetter("")  </td><td align="left">C</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Tile[3-C ].getValue("")  </td><td align="left">3</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Tile[3-A ].setLetter("'A'")  </td><td align="left">A</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Tile[8-A ].getValue("")  </td><td align="left">8</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Tile[10-Z ].getLetter("")  </td><td align="left">Z</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Tile[10-Z ].getValue("")  </td><td align="left">10</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Tile[10-A ].setLetter("'A'")  </td><td align="left">A</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Tile[8-A ].getValue("")  </td><td align="left">8</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Tile[10-Z ].toString("")  </td><td align="left">10-Z</td><td bgcolor="red"><b>Z - 10 </b></td></tr>
-	<tr><td align="right" width="200">Tile[3-Z ].equals("")  </td><td align="left"></td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Tile[3-Z ].!equals("")  </td><td align="left"></td><td width="50" bgcolor="green"> :) </td></tr>
-	[deductions=0.05]
-	
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] 
-	['Tile: PASSED - GOOD JOB BUT SOME EDGE CASE ERRORS WERE FOUND.']
-[DONE chapter11]
+*[BEGIN ch11b - Poker Hands]
+  [EXPECTING TARGETS] ['CheckPokerHands']
+	[ERROR] No chapter work for:ch11b - Poker Hands
+[DONE ch11b - Poker Hands]
 [ASSIGNMENT DONE]  Think Java: Ch11
-<b>          [SCORE] <font color="green">0.95</font></b>
+<b>          [SCORE] 0.25</b>
 
 </pre></body></html>
