--- a/stureports/think-java/1amsmith1020.think-java_results.html
+++ b/stureports/think-java/1amsmith1020.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-11-30
+Run date: 2018-12-02
 <br>Student User: 1amsmith1020
 <br>Project: think-java
 <br>
@@ -177,7 +177,7 @@ Ch6Ex5.java:57: error: cannot find symbol
 <hr>
 
 <b>[Assignment]  > Think Java: Ch7 - pt1 < </b>
-  [DESC] HW4: Fourth HW Assignment, Ch7 Ex3 & 4
+  [DESC] HW7: Fourth HW Assignment, Ch7 Ex3 & 4
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']
@@ -430,7 +430,7 @@ Ch6Ex5.java:57: error: cannot find symbol
 <hr>
 
 <b>[Assignment]  > Think Java: Ch7 - pt2 < </b>
-  [DESC] HW5: Fith HW Assignment, Ch7 Ex5, 6, 8
+  [DESC] HW7: Fith HW Assignment, Ch7 Ex5, 6, 8
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise5', 'Exercise6', 'Exercise8']
@@ -504,14 +504,13 @@ TestCh7Ex8.java:68: error: cannot find symbol
 <hr>
 
 <b>[Assignment]  > Think Java: Ch11< </b>
-  [DESC] HW6: HW Assignment, Ch11 Ex3
+  [DESC] HW11: Poker Hand Test
 
-*[BEGIN chapter11]
-  [EXPECTING TARGETS] ['Tile']
-[SUMMARY] 
-	['Tile: MISSING (- 0.50)']
-[DONE chapter11]
+*[BEGIN ch11b - Poker Hands]
+  [EXPECTING TARGETS] ['CheckPokerHands']
+	[ERROR] No chapter work for:ch11b - Poker Hands
+[DONE ch11b - Poker Hands]
 [ASSIGNMENT DONE]  Think Java: Ch11
-<b>          [SCORE] 0.50</b>
+<b>          [SCORE] 0.25</b>
 
 </pre></body></html>
