--- a/stureports/think-java/AdamRashid.think-java_results.html
+++ b/stureports/think-java/AdamRashid.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-11-30
+Run date: 2018-12-02
 <br>Student User: AdamRashid
 <br>Project: think-java
 <br>
@@ -73,8 +73,8 @@ How many seconds? 13.00 sec = 0 hour, 0 min
 I'm thinking of a number between 1 and 100(Including Both)
 	Can you guess what it is? 
 	Type a number: You guessed: 13
-	The number I was thinking of is: 17
-	You were off by: 4
+	The number I was thinking of is: 10
+	You were off by: 3
 	
 <--
 	[OUTPUT OK]
@@ -217,7 +217,7 @@ I'm thinking of a number between 1 and 100(Including Both)
 <hr>
 
 <b>[Assignment]  > Think Java: Ch7 - pt1 < </b>
-  [DESC] HW4: Fourth HW Assignment, Ch7 Ex3 & 4
+  [DESC] HW7: Fourth HW Assignment, Ch7 Ex3 & 4
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']
@@ -278,7 +278,7 @@ I'm thinking of a number between 1 and 100(Including Both)
 <hr>
 
 <b>[Assignment]  > Think Java: Ch7 - pt2 < </b>
-  [DESC] HW5: Fith HW Assignment, Ch7 Ex5, 6, 8
+  [DESC] HW7: Fith HW Assignment, Ch7 Ex5, 6, 8
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise5', 'Exercise6', 'Exercise8']
@@ -368,42 +368,13 @@ Yes Factor
 <hr>
 
 <b>[Assignment]  > Think Java: Ch11< </b>
-  [DESC] HW6: HW Assignment, Ch11 Ex3
+  [DESC] HW11: Poker Hand Test
 
-*[BEGIN chapter11]
-  [EXPECTING TARGETS] ['Tile']
-[COMPILING] Tile.java
-	[SUCCESSFUL COMPILE] Tile.java
-[TESTING WITH] TestTile
-[COMPILING] TestTile.java
-	[SUCCESSFUL COMPILE] TestTile.java
-[RUNNING] TestTile
--->
-
-	<br>Chapter11, Exercise3: Tile Class
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">new Tile()("C, 3")  </td><td align="left">Null</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">new Tile()("Z, 10")  </td><td align="left">Null</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Tile[C - 3 ].getLetter("")  </td><td align="left">C</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Tile[C - 3 ].getValue("")  </td><td align="left">3</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Tile[A - 3 ].setLetter("'A'")  </td><td align="left">A</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Tile[A - 8 ].getValue("")  </td><td align="left">8</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Tile[Z - 10 ].getLetter("")  </td><td align="left">Z</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Tile[Z - 10 ].getValue("")  </td><td align="left">10</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Tile[A - 10 ].setLetter("'A'")  </td><td align="left">A</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Tile[A - 8 ].getValue("")  </td><td align="left">8</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Tile[Z - 10 ].toString("")  </td><td align="left">Z - 10</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Tile[Z - 3 ].equals("")  </td><td align="left"></td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Tile[Z - 3 ].!equals("")  </td><td align="left"></td><td width="50" bgcolor="green"> :) </td></tr>
-	[deductions=0.0]
-	
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] 
-	['Tile: PASSED - EXCELLENT!']
-[DONE chapter11]
+*[BEGIN ch11b - Poker Hands]
+  [EXPECTING TARGETS] ['CheckPokerHands']
+	[ERROR] No chapter work for:ch11b - Poker Hands
+[DONE ch11b - Poker Hands]
 [ASSIGNMENT DONE]  Think Java: Ch11
-<b>          [SCORE] <font color="green">1.00</font></b>
+<b>          [SCORE] 0.25</b>
 
 </pre></body></html>
