--- a/stureports/think-java/aliyaaware.think-java_results.html
+++ b/stureports/think-java/aliyaaware.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-11-30
+Run date: 2018-12-02
 <br>Student User: aliyaaware
 <br>Project: think-java
 <br>
@@ -64,8 +64,8 @@ How many seconds do you want to convert? 13 seconds = 0 hours, 0 minutes, 13 sec
 -->
 Im thinking of a number between 1-100, can you guess it?
 	Type a number : Your Guess is 13
-	THe number I was thinkin of is: 88
-	You were off by: 75
+	THe number I was thinkin of is: 95
+	You were off by: 82
 	
 <--
 	[OUTPUT OK]
@@ -208,7 +208,7 @@ Im thinking of a number between 1-100, can you guess it?
 <hr>
 
 <b>[Assignment]  > Think Java: Ch7 - pt1 < </b>
-  [DESC] HW4: Fourth HW Assignment, Ch7 Ex3 & 4
+  [DESC] HW7: Fourth HW Assignment, Ch7 Ex3 & 4
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']
@@ -288,7 +288,7 @@ Im thinking of a number between 1-100, can you guess it?
 <hr>
 
 <b>[Assignment]  > Think Java: Ch7 - pt2 < </b>
-  [DESC] HW5: Fith HW Assignment, Ch7 Ex5, 6, 8
+  [DESC] HW7: Fith HW Assignment, Ch7 Ex5, 6, 8
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise5', 'Exercise6', 'Exercise8']
@@ -372,39 +372,13 @@ Im thinking of a number between 1-100, can you guess it?
 <hr>
 
 <b>[Assignment]  > Think Java: Ch11< </b>
-  [DESC] HW6: HW Assignment, Ch11 Ex3
+  [DESC] HW11: Poker Hand Test
 
-*[BEGIN chapter11]
-  [EXPECTING TARGETS] ['Tile']
-[COMPILING] Tile.java
-	[SUCCESSFUL COMPILE] Tile.java
-[TESTING WITH] TestTile
-[COMPILING] TestTile.java
-	[ERROR] javac failed TestTile.java
- ----begin compile output------- 
-TestTile.java:38: error: incompatible types: possible lossy conversion from int to char
-	            Tile t = new Tile(c, value);        
-	                                 ^
-	TestTile.java:56: error: incompatible types: possible lossy conversion from int to char
-	            Tile t = new Tile(c, value);        
-	                                 ^
-	TestTile.java:100: error: incompatible types: possible lossy conversion from int to char
-	            Tile t = new Tile(c, value);        
-	                                 ^
-	TestTile.java:122: error: incompatible types: possible lossy conversion from int to char
-	            Tile t = new Tile(c, value);
-	                                 ^
-	TestTile.java:123: error: incompatible types: possible lossy conversion from int to char
-	            Tile t2 = new Tile(c, value);        
-	                                  ^
-	Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
-	5 errors
-	
------------END COMPILE-------
-[SUMMARY] 
-	['Tile: COMPILE ERROR (- 0.30)']
-[DONE chapter11]
+*[BEGIN ch11b - Poker Hands]
+  [EXPECTING TARGETS] ['CheckPokerHands']
+	[ERROR] No chapter work for:ch11b - Poker Hands
+[DONE ch11b - Poker Hands]
 [ASSIGNMENT DONE]  Think Java: Ch11
-<b>          [SCORE] 0.70</b>
+<b>          [SCORE] 0.25</b>
 
 </pre></body></html>
