--- a/stureports/think-java/coleschomer.think-java_results.html
+++ b/stureports/think-java/coleschomer.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-11-30
+Run date: 2018-12-02
 <br>Student User: coleschomer
 <br>Project: think-java
 <br>
@@ -159,7 +159,7 @@ American Format:
 <hr>
 
 <b>[Assignment]  > Think Java: Ch7 - pt1 < </b>
-  [DESC] HW4: Fourth HW Assignment, Ch7 Ex3 & 4
+  [DESC] HW7: Fourth HW Assignment, Ch7 Ex3 & 4
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']
@@ -171,7 +171,7 @@ American Format:
 <hr>
 
 <b>[Assignment]  > Think Java: Ch7 - pt2 < </b>
-  [DESC] HW5: Fith HW Assignment, Ch7 Ex5, 6, 8
+  [DESC] HW7: Fith HW Assignment, Ch7 Ex5, 6, 8
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise5', 'Exercise6', 'Exercise8']
@@ -183,12 +183,12 @@ American Format:
 <hr>
 
 <b>[Assignment]  > Think Java: Ch11< </b>
-  [DESC] HW6: HW Assignment, Ch11 Ex3
+  [DESC] HW11: Poker Hand Test
 
-*[BEGIN chapter11]
-  [EXPECTING TARGETS] ['Tile']
-	[ERROR] No chapter work for:chapter11
-[DONE chapter11]
+*[BEGIN ch11b - Poker Hands]
+  [EXPECTING TARGETS] ['CheckPokerHands']
+	[ERROR] No chapter work for:ch11b - Poker Hands
+[DONE ch11b - Poker Hands]
 [ASSIGNMENT DONE]  Think Java: Ch11
 <b>          [SCORE] 0.25</b>
 
