"report check in 2018-12-02"

--- a/stureports/think-java/Crevin921.think-java_results.html
+++ b/stureports/think-java/Crevin921.think-java_results.html
@@ -7,13 +7,8 @@ Run date: 2018-12-02
 
 ----------------------------------------------------------
 [STUDENT INIT] Crevin921
-[SETUP] Creating student dir:  ./stuwork/Crevin921
-[PRE-WARN]: Expected non-empty: ./stuwork/Crevin921/think-java-Crevin921
-[GITWORK]
-[Attempting DL:https://github.com/SwettSoquelHS/think-java-Crevin921.git]
-Cloning into 'think-java-Crevin921'...
-	
-[GITWORK DONE]
+[REUSING WORK]: ./stuwork/Crevin921/think-java-Crevin921
+[GITWORK] Re-using code.
 
 <hr>
 
@@ -72,8 +67,8 @@ Seconds to minutes to hours
 Im thinking of a number between 1 and 100
 	Can you guess what it is? 
 	your guess was: 13
-	The number i was thinking of was: 71
-	you were off by -58
+	The number i was thinking of was: 58
+	you were off by -45
 	
 <--
 	[OUTPUT OK]
@@ -483,13 +478,26 @@ TestCh7Ex8.java:68: error: cannot access Exercise8
 <hr>
 
 <b>[Assignment]  > Think Java: Ch11< </b>
+  [DESC] HW11: HW Assignment, Ch11 Ex3
+
+*[BEGIN chapter11]
+  [EXPECTING TARGETS] ['Tile']
+[SUMMARY] 
+	['Tile: MISSING (- 0.50)']
+[DONE chapter11]
+[ASSIGNMENT DONE]  Think Java: Ch11
+<b>          [SCORE] 0.50</b>
+
+<hr>
+
+<b>[Assignment]  > Think Java: Ch12< </b>
   [DESC] HW11: Poker Hand Test
 
-*[BEGIN ch11b - Poker Hands]
+*[BEGIN ch12]
   [EXPECTING TARGETS] ['CheckPokerHands']
-	[ERROR] No chapter work for:ch11b - Poker Hands
-[DONE ch11b - Poker Hands]
-[ASSIGNMENT DONE]  Think Java: Ch11
+	[ERROR] No chapter work for:ch12
+[DONE ch12]
+[ASSIGNMENT DONE]  Think Java: Ch12
 <b>          [SCORE] 0.25</b>
 
 </pre></body></html>
