--- a/stureports/think-java/MegaMichael1000.think-java_results.html
+++ b/stureports/think-java/MegaMichael1000.think-java_results.html
@@ -67,8 +67,8 @@ Enter the amount of seconds: 13 seconds = 0 hours, 0 minutes, 13 seconds.
 I'm thinking of a number between 1 and 100
 	(including both). Can you guess what it is?
 	Type a number: Your guess is: 13
-	The number I was thinking of is: 61
-	You were off by: 48
+	The number I was thinking of is: 74
+	You were off by: 61
 	
 <--
 	[OUTPUT OK]
@@ -261,13 +261,26 @@ I'm thinking of a number between 1 and 100
 <hr>
 
 <b>[Assignment]  > Think Java: Ch11< </b>
+  [DESC] HW11: HW Assignment, Ch11 Ex3
+
+*[BEGIN chapter11]
+  [EXPECTING TARGETS] ['Tile']
+[SUMMARY] 
+	['Tile: MISSING (- 0.50)']
+[DONE chapter11]
+[ASSIGNMENT DONE]  Think Java: Ch11
+<b>          [SCORE] 0.50</b>
+
+<hr>
+
+<b>[Assignment]  > Think Java: Ch12< </b>
   [DESC] HW11: Poker Hand Test
 
-*[BEGIN ch11b - Poker Hands]
+*[BEGIN ch12]
   [EXPECTING TARGETS] ['CheckPokerHands']
-	[ERROR] No chapter work for:ch11b - Poker Hands
-[DONE ch11b - Poker Hands]
-[ASSIGNMENT DONE]  Think Java: Ch11
+	[ERROR] No chapter work for:ch12
+[DONE ch12]
+[ASSIGNMENT DONE]  Think Java: Ch12
 <b>          [SCORE] 0.25</b>
 
 </pre></body></html>
