--- a/stureports/think-java/gaberoessler.think-java_results.html
+++ b/stureports/think-java/gaberoessler.think-java_results.html
@@ -71,8 +71,8 @@ How many seconds? 13 seconds = 0 hours, 0 minutes, and 0 seconds
 I'm thinking of a number between 1 and 100, inclusive.
 	Can you guess what it is?
 	Type your guess: Your guess is: 13
-	The number I was thinking of was: 23
-	You were off by: 10
+	The number I was thinking of was: 87
+	You were off by: 74
 	
 <--
 	[OUTPUT OK]
@@ -171,13 +171,25 @@ The result is 5.0
 <hr>
 
 <b>[Assignment]  > Think Java: Ch11< </b>
+  [DESC] HW11: HW Assignment, Ch11 Ex3
+
+*[BEGIN chapter11]
+  [EXPECTING TARGETS] ['Tile']
+	[ERROR] No chapter work for:chapter11
+[DONE chapter11]
+[ASSIGNMENT DONE]  Think Java: Ch11
+<b>          [SCORE] 0.25</b>
+
+<hr>
+
+<b>[Assignment]  > Think Java: Ch12< </b>
   [DESC] HW11: Poker Hand Test
 
-*[BEGIN ch11b - Poker Hands]
+*[BEGIN ch12]
   [EXPECTING TARGETS] ['CheckPokerHands']
-	[ERROR] No chapter work for:ch11b - Poker Hands
-[DONE ch11b - Poker Hands]
-[ASSIGNMENT DONE]  Think Java: Ch11
+	[ERROR] No chapter work for:ch12
+[DONE ch12]
+[ASSIGNMENT DONE]  Think Java: Ch12
 <b>          [SCORE] 0.25</b>
 
 </pre></body></html>
