--- a/stureports/think-java/tpipitone.think-java_results.html
+++ b/stureports/think-java/tpipitone.think-java_results.html
@@ -69,7 +69,7 @@ How many seconds? 13 seconds is equal to 0 hours, 0 minutes, 13 seconds.
 -->
 Guess my number between 1 and 100!
 	Type a number: Your guess is: 13
-	My number was 7. You were off by 6.
+	My number was 10. You were off by 3.
 	
 <--
 	[OUTPUT OK]
@@ -358,13 +358,54 @@ Ch 4 Multadd
 <hr>
 
 <b>[Assignment]  > Think Java: Ch11< </b>
+  [DESC] HW11: HW Assignment, Ch11 Ex3
+
+*[BEGIN chapter11]
+  [EXPECTING TARGETS] ['Tile']
+[COMPILING] Tile.java
+	[SUCCESSFUL COMPILE] Tile.java
+[TESTING WITH] TestTile
+[COMPILING] TestTile.java
+	[SUCCESSFUL COMPILE] TestTile.java
+[RUNNING] TestTile
+-->
+
+	<br>Chapter11, Exercise3: Tile Class
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">new Tile()("C, 3")  </td><td align="left">Null</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">new Tile()("Z, 10")  </td><td align="left">Null</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[Tile@7852e922 ].getLetter("")  </td><td align="left">C</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[Tile@7852e922 ].getValue("")  </td><td align="left">3</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[Tile@7852e922 ].setLetter("'A'")  </td><td align="left">A</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[Tile@7852e922 ].getValue("")  </td><td align="left">8</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[Tile@4e25154f ].getLetter("")  </td><td align="left">Z</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[Tile@4e25154f ].getValue("")  </td><td align="left">10</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[Tile@4e25154f ].setLetter("'A'")  </td><td align="left">A</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[Tile@4e25154f ].getValue("")  </td><td align="left">8</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[Tile@70dea4e ].toString("")  </td><td align="left">Tile@70dea4e</td><td bgcolor="red"><b>Z - 10 </b></td></tr>
+	<tr><td align="right" width="200">Tile[Tile@5c647e05 ].equals("")  </td><td align="left">Tile@33909752</td><td bgcolor="red"><b>Expected same tiles to be the same. </b></td></tr>
+	<tr><td align="right" width="200">Tile[Tile@5c647e05 ].!equals("")  </td><td align="left"></td><td width="50" bgcolor="green"> :) </td></tr>
+	[deductions=0.1]
+	
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] 
+	['Tile: PASSED - BUT TEST CASES FOUND SOME ERRORS']
+[DONE chapter11]
+[ASSIGNMENT DONE]  Think Java: Ch11
+<b>          [SCORE] <font color="green">0.90</font></b>
+
+<hr>
+
+<b>[Assignment]  > Think Java: Ch12< </b>
   [DESC] HW11: Poker Hand Test
 
-*[BEGIN ch11b - Poker Hands]
+*[BEGIN ch12]
   [EXPECTING TARGETS] ['CheckPokerHands']
-	[ERROR] No chapter work for:ch11b - Poker Hands
-[DONE ch11b - Poker Hands]
-[ASSIGNMENT DONE]  Think Java: Ch11
+	[ERROR] No chapter work for:ch12
+[DONE ch12]
+[ASSIGNMENT DONE]  Think Java: Ch12
 <b>          [SCORE] 0.25</b>
 
 </pre></body></html>
